--- a/estilos/CSS.css
+++ b/estilos/CSS.css
@@ -15,3 +15,17 @@ header{
     background-size:cover;
     border-radius: 20px;
 }
+h3{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(255, 0, 0);
+}
+span{
+    color: yellow;
+}
+#img{
+    width: 140px;
+    border-radius: 20px;
+    border: 5px;
+    border-style:none;
+    float: left;
+}
