--- a/estilos/CSS.css
+++ b/estilos/CSS.css
@@ -3,8 +3,7 @@
     border: solid;
     border-style:none;
     box-shadow: 8px 8px 12px;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin: 20px;
     height: auto;
     width: auto;
     float: left;
