--- a/estilos/CSS.css
+++ b/estilos/CSS.css
@@ -13,7 +13,9 @@
 header{
     background-color: white;
     background-size:cover;
-    
+}
+h1{
+    text-align: center;
 }
 h3{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -59,7 +61,6 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
 }
 
 .button {
