--- a/estilos/CSS.css
+++ b/estilos/CSS.css
@@ -14,8 +14,9 @@ header{
     background-color: white;
     background-size:cover;
 }
-h1{
-    text-align: center;
+
+h4{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 h3{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -44,7 +45,7 @@ span{
 
 #derecha{
     float: right;
-    padding-left: 20px;
+    padding-left: 30px;
 }
 
 footer{
@@ -55,6 +56,11 @@ footer{
 
 #tabla{
     width: 100%;
+
+}
+
+#tabla2{
+    margin-left: 10%;
 }
 
 #botones {
