--- a/estilos/CSS.css
+++ b/estilos/CSS.css
@@ -1,3 +1,6 @@
+*{
+    zoom: 98%;
+}
 #pagina {
     background: rgb(127, 120, 247);
     background: linear-gradient(90deg, rgba(127, 120, 247, 1) 0%, rgba(252, 124, 149, 1) 35%, rgba(0, 212, 255, 1) 100%);
